Displacement Method: true Crashing #43311

Closed
opened 2015-01-18 20:17:15 +01:00 by Mason · 24 comments

System Information
Windows 7 Professional
Cpu: i5-3470
gpu: gtx 970 4gb

Blender Version
Broken: (example: 2.73 (b4d8fb5)
Worked: (unknown)

Short description of error
When using the displacement method of "True" and using a bump map in the node setup (using cpu and experimental) it crashes every time on render no matter how low or high the resolution of the mesh is.

Exact steps for others to reproduce the error
Open Blender 2.73>add a mesh>create a node setup with displacement>turn on cpu rendering> turn on experimental>enable "true" displacement method under
object data panel for your mesh> Render with either real time or f12> watch blender crash :(

**System Information** Windows 7 Professional Cpu: i5-3470 gpu: gtx 970 4gb **Blender Version** Broken: (example: 2.73 (b4d8fb5) Worked: (unknown) **Short description of error** When using the displacement method of "True" and using a bump map in the node setup (using cpu and experimental) it crashes every time on render no matter how low or high the resolution of the mesh is. **Exact steps for others to reproduce the error** Open Blender 2.73>add a mesh>create a node setup with displacement>turn on cpu rendering> turn on experimental>enable "true" displacement method under object data panel for your mesh> Render with either real time or f12> watch blender crash :(
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MasonMenzies

Added subscriber: @MasonMenzies

Added subscriber: @mont29

Added subscriber: @mont29

Please always attach a .blend file to help us reproduce the issue.

Please always attach a .blend file to help us reproduce the issue.
Author

How? just with dropbox or something?

How? just with dropbox or something?

just drag and drop it in a comment here…

just drag and drop it in a comment here…
Author

Alright, here it is, when i hit render it crashes all the time. even without the subsurface on :\ Bug_Report.zip

Alright, here it is, when i hit render it crashes all the time. even without the subsurface on :\ [Bug_Report.zip](https://archive.blender.org/developer/F138126/Bug_Report.zip)

Confirm the crash, with debug build got:

read blend: /home/i74700deb64/Téléchargements/Bug_Report.blend
blender: /home/i74700deb64/blender/__work__/src/intern/cycles/kernel/kernel_compat_cpu.h:51: T ccl::texture<T>::fetch(int) [with T = unsigned int]: Assertion `index >= 0 && index < width' failed.
blender: /home/i74700deb64/blender/__work__/src/intern/cycles/kernel/kernel_compat_cpu.h:51: T ccl::texture<T>::fetch(int) [with T = unsigned int]: Assertion `index >= 0 && index < width' failed.
blender: /home/i74700deb64/blender/__work__/src/intern/cycles/kernel/kernel_compat_cpu.h:51: T ccl::texture<T>::fetch(int) [with T = unsigned int]: Assertion `index >= 0 && index < width' failed.
blender: /home/i74700deb64/blender/__work__/src/intern/cycles/kernel/kernel_compat_cpu.h:51: T ccl::texture<T>::fetch(int) [with T = unsigned int]: Assertion `index >= 0 && index < width' failed.
Abort
Confirm the crash, with debug build got: ``` read blend: /home/i74700deb64/Téléchargements/Bug_Report.blend blender: /home/i74700deb64/blender/__work__/src/intern/cycles/kernel/kernel_compat_cpu.h:51: T ccl::texture<T>::fetch(int) [with T = unsigned int]: Assertion `index >= 0 && index < width' failed. blender: /home/i74700deb64/blender/__work__/src/intern/cycles/kernel/kernel_compat_cpu.h:51: T ccl::texture<T>::fetch(int) [with T = unsigned int]: Assertion `index >= 0 && index < width' failed. blender: /home/i74700deb64/blender/__work__/src/intern/cycles/kernel/kernel_compat_cpu.h:51: T ccl::texture<T>::fetch(int) [with T = unsigned int]: Assertion `index >= 0 && index < width' failed. blender: /home/i74700deb64/blender/__work__/src/intern/cycles/kernel/kernel_compat_cpu.h:51: T ccl::texture<T>::fetch(int) [with T = unsigned int]: Assertion `index >= 0 && index < width' failed. Abort ```
Sergey Sharybin was assigned by Bastien Montagne 2015-01-19 13:00:36 +01:00

This issue was referenced by 7fd4c440ec

This issue was referenced by 7fd4c440ec2207eb80be13bf14eefa940e39d43e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7fd4c440ec.

Closed by commit 7fd4c440ec.

This issue was referenced by blender/cycles@bd1bab7e4e

This issue was referenced by blender/cycles@bd1bab7e4ee7e098853b764fb18f40092f527957
Author

i'm not sure what all this means :\ is there some form of a fix for the issue? is it just my computer? please let me know. thanks

  • Mason
i'm not sure what all this means :\ is there some form of a fix for the issue? is it just my computer? please let me know. thanks - Mason
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

The bug as been fixed a working version of blender can be found here https://builder.blender.org/download/

This fix will probably make it into 2.73a

The bug as been fixed a working version of blender can be found here https://builder.blender.org/download/ This fix will probably make it into 2.73a
Member

You may have to wait for tomorrow for the fix to be implemented

You may have to wait for tomorrow for the fix to be implemented
Member

@MasonMenzies you don't have know what the code change means

@MasonMenzies you don't have know what the code change means
Author

so what your saying is it's been seen as a bug and will be fixed in the next build?

so what your saying is it's been seen as a bug and will be fixed in the next build?
Member

Yes tomorrow Build bot version will contain the fix and it might already be in there if i am looking at the build times correctly

Yes tomorrow Build bot version will contain the fix and it might already be in there if i am looking at the build times correctly
Author

wow, really? that's awesome! well thanks guys for sorting that out :)

wow, really? that's awesome! well thanks guys for sorting that out :)
Author

does anyone know if the fix has been posted up yet? i downloaded the latest build (the page said it was updated today) but it's still crashing. anyone know if it is up?

does anyone know if the fix has been posted up yet? i downloaded the latest build (the page said it was updated today) but it's still crashing. anyone know if it is up?

Buildbot builds are built once a day (usually during european night), the one done this night should have the fix, the previous one probably didn’t…

Buildbot builds are built once a day (usually during european night), the one done this night should have the fix, the previous one probably didn’t…

The latest builds which are a1f4821 should have the fix included. I also downloaded the build and can't reproduce the crash.

The latest builds which are a1f4821 should have the fix included. I also downloaded the build and can't reproduce the crash.

This issue was referenced by c9ca7b816e

This issue was referenced by c9ca7b816ef2a1daab2aba508a266d079ef21417
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43311
No description provided.